--- a/reasonapps-recruitment-task/package.json
+++ b/reasonapps-recruitment-task/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.0",
+    "axios": "^1.1.3",
+    "graphql": "^16.6.0",
+    "nanoid": "^4.0.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
