--- a/reasonapps-recruitment-task/package.json
+++ b/reasonapps-recruitment-task/package.json
@@ -10,17 +10,20 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.0",
-    "axios": "^1.1.3",
+    "antd": "^4.23.6",
     "graphql": "^16.6.0",
     "nanoid": "^4.0.0",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-feather": "^2.0.10",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@types/node": "18.11.4",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@types/styled-components": "^5.1.26",
     "eslint": "8.26.0",
     "eslint-config-next": "12.3.1",
     "typescript": "4.8.4"
