--- a/reasonapps-recruitment-task/package.json
+++ b/reasonapps-recruitment-task/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.0",
+    "@reduxjs/toolkit": "^1.8.6",
     "antd": "^4.23.6",
     "graphql": "^16.6.0",
     "nanoid": "^4.0.0",
     "next": "12.3.1",
+    "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
+    "react-redux": "^8.0.4",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
